--- a/src/constructPseudotemporalOrdering.Rmd
+++ b/src/constructPseudotemporalOrdering.Rmd
@@ -70,20 +70,21 @@ Heatmap(t(annot.out$Enrichment), cluster_rows = FALSE, cluster_columns = FALSE, 
 
 ```{r "HD Find Cluster Markers"}
 # Import Clinical Data from ROSMAP
+ACTIONet.out <- HD.dat$ACTIONet
 clinical <- read.xlsx("/home/samsl/Pseudotemporal-GRNs/raw-data/Processed_HD_data/Human_HD_metedata.xlsx", 1, header=TRUE)
 clinical$Grade <- as.factor(as.numeric(clinical$Grade))
 clinical <- clinical[1:12,]
 
-grade.ind <- factor(unlist(lapply(colData(sce)$batch, function (x) { clinical[which(clinical$Batch.Order == x),"Grade"] })))
+grade.ind <- factor(unlist(lapply(colData(HD.dat$sce)$batch, function (x) { clinical[which(clinical$Batch.Order == x),"Grade"] })))
 
 # Annotate ACTIONet with each clinical indicator
-ACTIONet.out <- add.cell.annotations(ACTIONet.out, sce$grade, annotation.name="grade")
+ACTIONet.out <- add.cell.annotations(ACTIONet.out, HD.dat$sce$grade, annotation.name="grade")
 
 # Visualize  the clinical indicators in the ACTIONet layout
 plot.ACTIONet(ACTIONet.out, labels = ACTIONet.out$annotations[["grade"]]$Labels)
 
 # Identify disease progression enriched archetypes
-annot.out <- annotate.archetypes.using.labels(ACTIONet.out, grade.ind, core = TRUE)
+annot.out <- annotate.archetypes.using.labels(ACTIONet.out, HD.dat$sce$grade, core=TRUE)
 png(paste("img/",cell.type,"_cell_state_",selected.ind,"_enrichment.png",sep=""))
 Heatmap(t(annot.out$Enrichment), cluster_rows = FALSE, cluster_columns = FALSE, name='Enrichment', column_title='Cell State', column_title_side='bottom')
 ```
@@ -93,6 +94,11 @@ We can verify the correlation of this cell state with progression by searching f
 ```{r "Pathway Enrichment"}
 data("nanoStringDB_human")
 ADmarkers <- nanoStringDB_human$AD
+HDmarkers <- as.matrix(cbind(rep(1,length(HD.markers$genes)), rep(1,length(HD.markers$genes))))
+colnames(HDmarkers) <- c("Disease.Association", "Nothing")
+rownames(HDmarkers) <- HD.markers$genes
+HDmarkers <- Matrix(HDmarkers, sparse=TRUE)
+enrichment.out <- t(geneset.enrichment.archetype(HD.dat$ACTIONet, ADmarkers))
 enrichment.out <- t(geneset.enrichment.archetype(ACTIONet.out, ADmarkers))
 png(paste0("img/",cell.type,"_cell_state_disease_enrichment.png"))
 Heatmap(t(enrichment.out), cluster_columns=FALSE, name='Enrichment', column_title = 'Cell State', column_title_side = 'bottom')
@@ -129,8 +135,9 @@ listMode <- function(v) {
 
 correlated.state <- listMode(c(braak.vote, cerad.vote, cogdx.vote, disease.vote, active.mic.vote))
 
+correlated.state <- 2
 disease.score <- ACTIONet.out$unification.out$H.core[correlated.state,]
-core.significance <- ACTIONet.out$unification.out$DE.core@assays[["significance"]]
+core.significance <- ACTIONet.out$unification.out$DE.core@assays@data$significance
 associated.genes <- rownames(core.significance)[order(core.significance[,correlated.state], decreasing=TRUE)]
 png(paste("img/",cell.type,"_archetype_disease_score_gradient.png",sep=""))
 plot.ACTIONet.gradient(ACTIONet.out,disease.score)
@@ -145,7 +152,7 @@ grade.enrich <- annotate.archetypes.using.labels(ACTIONet.out, grade.ind, core =
 grade.vote <- which.max(grade.enrich[,MAX.GRADE])
 
 DISEASE.ENRICH.COL <- 1
-disease.enrich <- t(geneset.enrichment.archetype(ACTIONet.out, ADmarkers))
+disease.enrich <- t(geneset.enrichment.archetype(HD.dat$ACTIONet, HD.markers$genes))
 disease.vote <- which.max(disease.enrich[,DISEASE.ENRICH.COL])
 
 ACTIVE.MIC.COL <- 2
