--- a/src/learnDBN.Rmd
+++ b/src/learnDBN.Rmd
@@ -172,12 +172,6 @@ df <- as.data.frame(readRDS(paste0("processed-data/",cell.type,"/top_gene_counts
 marker.root <- "processed-data/markers/"
 kegg <- read.gmt(paste0(marker.root,"KEGG_AD.gmt"))
 adLib <- list("name"="library","description"="Library in AD SCE exeriment","genes"=colnames(df))
-blalock_incpt_dn <- read.gmt(paste0(marker.root,"BLALOCK_INCPT_AD_DN.gmt"))
-blalock_incpt_up <- read.gmt(paste0(marker.root,"BLALOCK_INCPT_AD_UP.gmt"))
-blalock_dn <- read.gmt(paste0(marker.root,"BLALOCK_AD_DN.gmt"))
-blalock_up <- read.gmt(paste0(marker.root,"BLALOCK_AD_UP.gmt"))
-blalock <- list("name"="blalock","description"="All blalock","genes"=c(blalock_incpt_dn$genes, blalock_incpt_up$genes, blalock_dn$genes, blalock_up$genes))
-gene.sets <- list("library"=adLib,"kegg"=kegg$genes,"incpt_dn"=blalock_incpt_dn$genes,"incpt_up"=blalock_incpt_up$genes,"dn"=blalock_dn$genes,"up"=blalock_up$genes,"blalock"=blalock)
 
 # Select subset of genes
 gene.df <- df[,intersect(adLib$genes,kegg$genes)]
@@ -245,11 +239,12 @@ write.csv(pseudotime.sorted, file=paste0("processed-data/",cell.type,"/GRNVBEM.c
 # --------MAIN LOOP----------- #
 ITERS = 100
 ALPHA = 0.05
+N.SAMPLES = 5000
 interactions <- data.frame()
 
 for (i in 1:ITERS){
   if (i %% 10 == 0) {print(i)}
-  res <- create_df(reduced.layers, 5000, distribution = "poisson")
+  res <- create_df(reduced.layers, N.SAMPLES, distribution = "poisson")
   bndf <- res$df
   bl <- res$bl
   fi_network <- fast.iamb(bndf, blacklist = bl, alpha = ALPHA)
@@ -259,7 +254,7 @@ for (i in 1:ITERS){
 ```
 
 ```{r "Plot result network"}
-BOOT.THRESH = 10
+BOOT.THRESH = 9
 if (BOOT.THRESH >= ITERS) {
   warning("Removal threshold is greater than number of iterations")
 }
@@ -303,8 +298,7 @@ plot(density(n.children))
 ```
 
 ```{r "Visualize network"}
-plot.adjacency.matrix(adjacency, "test.png")
-#plot.adjacency.matrix(adjacency, paste0("img/",cell.type,".adjacency3.png"))
+plot.adjacency.matrix(adjacency, paste0("img/",cell.type,"_poisson_adjacency.png"))
 ```
 
 ```{r "Verify simulated data"}
@@ -326,9 +320,6 @@ rownames(sim.avg.expression) <- chosen.genes
 colnames(sim.avg.expression) <- c(1,2,3,4)
 Heatmap(sim.avg.expression, cluster_columns = FALSE)
 
-
-sim.avg.expr <- apply(simulated.dat, 1, mean)
-names(simulated.dat) <- rep(names(chosen.genes), 4)
 ```
 
 ```{r}
@@ -343,11 +334,14 @@ for (i in seq(K.clusters)) {
   }
 }
 
-sim.dat.layer=c(rep(1,10000), rep(2,10000), rep(3,10000), rep(4,10000))
-sim.sce <- SingleCellExperiment(assays = list(logcounts = t(stacked.dat)))
+sim.dat.layer=c(rep(1,N.SAMPLES), rep(2,N.SAMPLES), rep(3,N.SAMPLES), rep(4,N.SAMPLES))
+sim.sce <- SingleCellExperiment(assays = list(counts = t(stacked.dat)))
+colnames(sim.sce) <- seq(4 * N.SAMPLES)
 colData(sim.sce)$layer <- sim.dat.layer
-reduced.sim.sce <- ACTIONet::reduce.sce(sim.sce)
-verif.ACTIONet <- run.ACTIONet(reduced.sim.sce, k_max = 20, thread_no = 12)
+rowData(sim.sce)$rowNames <- rownames(sim.sce)
+sim.sce <- normalize.sce(sim.sce,"default")
+reduced.sce <- reduce.sce(sim.sce)
+verify.ACTIONet <- run.ACTIONet(reduced.sce, k_max = 20, thread_no = 12)
 ```
 
 ```{r "Export network"}
