--- a/src/learnDBN.Rmd
+++ b/src/learnDBN.Rmd
@@ -241,6 +241,7 @@ ITERS = 10
 ALPHA = 0.05
 N.SAMPLES = 5000
 interactions <- data.frame()
+networkslist <- list()
 
 for (i in 1:ITERS){
   if (i %% 10 == 0) {print(i)}
@@ -248,8 +249,12 @@ for (i in 1:ITERS){
   bndf <- res$df
   bl <- res$bl
   fi_network <- fast.iamb(bndf, blacklist = bl, alpha = ALPHA)
+  networkslist[[i]] <- pc_network[["arcs"]]
   interactions <- rbind(interactions,fi_network[["arcs"]])
 }
+
+strongedges <- custom.strength(networkslist,colnames(bndf))
+
 # -------------------------- #
 ```
 
